See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.71.00

              makeman: deal properly with backlash in source.  Thanks Willem
              van Schaik <willem@schaik.com>.

15.03.29 BJH  Release 10.70.00

              Add st4topgm, pgmtost4.

              Add pgmtosbig.  Mainly a test tool for sbigtopgm.

              Add yuy2topam.  Thanks Michael Haardt.

              tifftopnm: allow input file to be nonseekable.
              Thanks Ludolf Holzheid <ludolf.holzheid@gmx.de>.

              pnmhisteq: add -noblack and -nowhite.  Idea from Andrew Brooks
              <arb@sat.dundee.ac.uk>.

              pgmmorphconv: add -gradient.  Thanks Michael Haardt
              <michael@moria.de>.

              giftopnm: Fix bug: crashes if purported GIF has neither a global
              color map nor a local one.

              pgmmorphconv: fix bug: always produces PGM Plain format.  Always
              present (progam was added to Netpbm in Release 10.0 (June 2002)).

              pamtilt: fix bug: unconditional crash.  Broken in Netpbm 10.63
              (June 2013).

              pnmgamma -srgbtobt709, -bt709tosrgb: fix bug; incorrect output
              nearly always.  Always broken (These options were new in
              Netpbm 10.32 (February 2006)).

              pamtosvg: fix use of unset variable; probably results in a
              crash.  Always present (pamtosvg was new in Netpbm 10.33 (March
              2006)).

              cameratopam: fix bug: variable used before set; unknown impact.
              Introduced in Netpbm 10.66 (March 2014).

              On Windows, don't leave temporary files around (previous code
              did so because unlink of an open file fails in Windows; new
              code deletes temporary files via atexit).  Thanks
              Ludolf Holzheid <ludolf.holzheid@gmx.de>.
