@@ -6,6 +6,11 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.71.00
 
+              ppmtoarbtxt: fix bug: wrong output when high numbers represent
+              darker.  Broken in Netpbm 10.69 (November 2014).
+
+              ppmtoarbtxt: better rounding in sample values.
+
               makeman: deal properly with backlash in source.  Thanks Willem
               van Schaik <willem@schaik.com>.
 
